refactor: remover dependencias mortas e consolidar configuracao de CORS